src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 40 33% 98%;
    --foreground: 222 47% 11%;

    --card: 0 0% 100%;
    --card-foreground: 222 47% 11%;

    --popover: 0 0% 100%;
    --popover-foreground: 222 47% 11%;

    --primary: 262 38% 19%;
    --primary-foreground: 210 40% 98%;

    --secondary: 210 40% 96%;
    --secondary-foreground: 222 47% 11%;

    --muted: 210 40% 96%;
    --muted-foreground: 215 16% 47%;

    --accent: 24 88% 58%;
    --accent-foreground: 222 47% 11%;

    --destructive: 0 84% 60%;
    --destructive-foreground: 210 40% 98%;

    --border: 214 32% 91%;
    --input: 214 32% 91%;
    --ring: 222 84% 4%;

    --radius: 0.5rem;
  }

  .dark {
    --background: 262 38% 19%;
    --foreground: 210 40% 98%;

    --card: 262 32% 25%;
    --card-foreground: 210 40% 98%;

    --popover: 262 32% 25%;
    --popover-foreground: 210 40% 98%;

    --primary: 210 40% 98%;
    --primary-foreground: 222 47% 11%;

    --secondary: 210 0% 50%;
    --secondary-foreground: 210 40% 98%;

    --muted: 210 0% 50%;
    --muted-foreground: 215 20% 65%;

    --accent: 24 88% 58%;
    --accent-foreground: 210 40% 98%;

    --destructive: 0 63% 31%;
    --destructive-foreground: 210 40% 98%;

    --border: 210 0% 50%;
    --input: 210 0% 50%;
    --ring: 212.7 26.8% 83.9%;
  }
  .theme {
    --animate-meteor-effect: meteor 5s linear infinite;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

@theme inline {
  @keyframes meteor {
  0% {
    transform: rotate(215deg) translateX(0);
    opacity: 1;
    }
  70% {
    opacity: 1;
    }
  100% {
    transform: rotate(215deg) translateX(-500px);
    opacity: 0;
    }
  }
}

